# care-membrane-mcp

./: .mcp.json  README.md  glama-ready.json  glama.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/mcp/: server-card.json
